--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class=" layer layer2"></div>
     <div class=" layer layer3">
         <span class="time">TIME</span>
-        <img  class="hour" src="./light.png" alt="">
+        <img  class="hour"src="./light.png" alt="">
         <img class="min" src="./light.png" alt="">
         <img class="sec" src="./light.png" alt="">
         <img class="am" src="./am1.png" alt="">
@@ -82,7 +82,7 @@
         <p class="two1">GRAB SOME HEALTHY BREAKFAST!!!</p>
     </div>
     <div class="window">
-    <img src="./wind.png" alt=""  width="530px" height="330px">
+    <!-- <img src="./wind.png" alt=""  width="530px" height="330px"> -->
     </div>
 </body>
 </html>
